src/test/ui/parser/issue-22647.stderr
error: expected expression, found keyword `where`
  --> $DIR/issue-22647.rs:3:5
   |
LL |     where F: Fn() -> i32
   |     ^^^^^ expected expression

error: aborting due to previous error

